crates/es-fluent-derive/tests/ui/fluent_variants_ignored_resource.rs
extern crate es_fluent;

use es_fluent_derive::EsFluentVariants;

#[derive(EsFluentVariants)]
#[fluent(resource = "login_error")]
pub enum LoginError {
    InvalidPassword,
}

fn main() {}
